# neural-registration

./: .gitignore  README.md  create_gif.py  environment.yaml  main.py  rendering.ipynb  sftp_commands.txt  testing.ipynb
instant-ngp-inversion/: setup.md
losses/: ncc_loss.py
misc/notebooks/: pf_parsing.ipynb
misc/old_attempts/: main.py  pyproject.toml
nerf_inversion/: main.py  nerfstudio_registration.py  testing.ipynb  testing.py  testing2.py
nerf_inversion/nerf_inv/: nerf_inv_config.py
nerf_inversion/notebooks/: testing.ipynb
notebooks/: backprop.ipynb  basic_registration.ipynb  basic_registration.md  rendering.ipynb  testing.ipynb  testing.md  testing2.ipynb  testing4.ipynb  testing5.ipynb
old_paper/: Makefile  settings.tex
old_paper/chapters/: background.tex  experiments.tex  implementation.tex  results.tex
old_paper/figures/: .gitkeep
paper/: .gitignore  README.md  main.tex  references.bib  thesis-guidelines.md  titlepage.tex
paper/chapters/: .gitkeep  appendix.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex
pytorch-pose-estimation/instant-ngp-inversion/: Demo.ipynb  nerf_bp.py
registration_results/: README.md
registration_results/0_065_cat5_2_l1/: tracking.json
registration_results/0_065_cat5_2_l2/: tracking.json
registration_results/0_065_cat5_2_mi/: tracking.json
registration_results/0_065_cat5_2_ncc/: tracking.json
style-ngp/: environment.yaml
style-ngp/style_ngp/: utils.py  (+5 more)
style_ngp/: style_ngp_config.py
thesis_paper/: .gitignore  bibliography.bib  main.bbl-SAVE-ERROR  main.tex  settings.tex
(+26 files in other folders)
